# devin-clone

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/helpers/: ai_tools.rs  config.rs  create_system_message.rs
src/models/: openai_request.rs  openai_response.rs
src/services/: handle_function.rs
