[package]
name = "devin-clone"
version = "1.0.2"
edition = "2021"

[dependencies]
langchain-rust = "2.6.0"
serde_json = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
chrono = "0.4"
lazy_static = "1.4.0"
env_logger = "0.9"
async-recursion = "1.0"
